# ForgedFlight

./: CMakeLists.txt  STRUCTURE.md
blockbench/blocks/: cube.bbmodel
docs/: 00-ai-prompt-pm-and-coach.md
docs/GDD/: 00-ai-GDD-prompt.md  00-index.md  01-vision.md  02-core-pillars.md  03-gameplay-loops.md  99-glossary.md
docs/GDD/04-systems/: blueprints-and-construction.md  factories-logistics.md  identity-and-factions.md  planet-gas-giants.md  power-voltage.md  research-and-labs.md  storage-and-inventories.md  tech-trees.md  vehicles-and-physics.md  warfare-and-defence.md  world-generation.md  world-sim-and-loading.md
docs/GDD/05-technical/: background-factory-ticking.md  content-pipeline.md  rendering-bgfx.md  server-architecture.md  ui-imgui.md
docs/development/: visual-studio-setup.md  vscode-msbuild-workflow.md
docs/learning/: 01-first-cube-rendering.md  README.md
docs/learning/00-getting-started/: AI-GUIDANCE.md  README.md
docs/learning/01-foundation/: 01-foundation-and-setup.md  README.md
docs/learning/02-graphics-rendering/: 02-graphics-pipeline-rendering.md  03-camera-input-system.md  README.md
docs/learning/03-world-systems/: 04-block-system-voxel-data.md  README.md
docs/learning/04-gameplay-mechanics/: README.md
docs/learning/05-factory-automation/: README.md
docs/learning/06-optimization/: README.md
docs/learning/07-advanced-topics/: README.md
docs/learning/99-archive-reference/: 00-voxel-engine-archive.md  02-cube-rendering-solutions-comparison.md  README.md
docs/learning/diligent-engine/: 01-setup-and-triangle.md
docs/pm/: roadmap.md
docs/pm/progress/: 2025-09-16-learning-materials-setup.md  2025-09-22-archive-complete.md
scripts/: build.bat  setup.bat
src/: ForgedFlightApp.cpp  ForgedFlightApp.h  main.cpp
src/Core/: ForgedFlightApp.cpp  ForgedFlightApp.h  main.cpp
src/Rendering/: AdvancedRenderer.cpp  AdvancedRenderer.h  Camera.cpp  Camera.h
src/World/: Block.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  VoxelWorld.cpp  VoxelWorld.h
